--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: 10.3.0
 
+  visibility_detector: 0.3.3
+
+  video_player: 2.4.10
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/videos/video.mp4
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
